--- a/index.html
+++ b/index.html
@@ -6,13 +6,46 @@
     <title>Reset Your Password</title>
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <style>
-        #message { display: none; color: green; margin-top: 10px; }
-        #error { display: none; color: red; margin-top: 10px; }
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        #resetForm {
+            display: none;
+            margin-top: 20px;
+        }
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            cursor: pointer;
+        }
+        #message {
+            display: none;
+            color: green;
+            margin-top: 10px;
+        }
+        #error {
+            display: none;
+            color: red;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
     <h1>Reset Your Password</h1>
-    <form id="resetForm" style="display: none;">
+    <form id="resetForm">
         <input type="password" id="newPassword" placeholder="Enter new password" required>
         <button type="submit">Reset Password</button>
     </form>
@@ -49,6 +82,10 @@
                 } else if (accessToken) {
                     console.log("Access token found:", accessToken);
                     localStorage.setItem('resetToken', accessToken);
+                    document.getElementById('resetForm').style.display = 'block';
+                } else if (code) {
+                    console.log("Code found:", code);
+                    localStorage.setItem('resetCode', code);
                     document.getElementById('resetForm').style.display = 'block';
                 } else if (error) {
                     console.log("Error found:", error, "Description:", errorDescription);
