--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             color: #333;
         }
         #resetForm {
-            display: none;
             margin-top: 20px;
         }
         input[type="password"] {
@@ -32,12 +31,10 @@
             cursor: pointer;
         }
         #message {
-            display: none;
             color: green;
             margin-top: 10px;
         }
         #error {
-            display: none;
             color: red;
             margin-top: 10px;
         }
@@ -75,17 +72,13 @@
                 const error = getURLParameter('error');
                 const errorDescription = getURLParameter('error_description');
 
-                if (code && type === 'recovery') {
-                    console.log("Recovery code found:", code);
-                    document.getElementById('resetForm').style.display = 'block';
+                if (code) {
+                    console.log("Code found:", code);
                     localStorage.setItem('resetCode', code);
+                    document.getElementById('resetForm').style.display = 'block';
                 } else if (accessToken) {
                     console.log("Access token found:", accessToken);
                     localStorage.setItem('resetToken', accessToken);
-                    document.getElementById('resetForm').style.display = 'block';
-                } else if (code) {
-                    console.log("Code found:", code);
-                    localStorage.setItem('resetCode', code);
                     document.getElementById('resetForm').style.display = 'block';
                 } else if (error) {
                     console.log("Error found:", error, "Description:", errorDescription);
@@ -98,24 +91,15 @@
 
             function showError(message) {
                 document.getElementById('error').textContent = message;
-                document.getElementById('error').style.display = 'block';
-            }
-
-            function clearError() {
-                document.getElementById('error').textContent = '';
-                document.getElementById('error').style.display = 'none';
             }
 
             function showMessage(message) {
                 document.getElementById('message').textContent = message;
-                document.getElementById('message').style.display = 'block';
             }
 
             async function resetPassword(event) {
                 event.preventDefault();
-                clearError();
                 const newPassword = document.getElementById('newPassword').value;
-                const token = localStorage.getItem('resetToken');
                 const code = localStorage.getItem('resetCode');
 
                 if (newPassword.length < 6) {
@@ -123,33 +107,22 @@
                     return;
                 }
 
-                if (!token && !code) {
-                    showError('No token or code found. Please request a new password reset link.');
+                if (!code) {
+                    showError('No reset code found. Please request a new password reset link.');
                     return;
                 }
 
                 try {
-                    let result;
-                    if (code) {
-                        result = await supabaseClient.auth.verifyOtp({
-                            token: code,
-                            type: 'recovery',
-                            newPassword: newPassword
-                        });
-                    } else {
-                        result = await supabaseClient.auth.updateUser(
-                            { password: newPassword },
-                            { accessToken: token }
-                        );
-                    }
+                    const { data, error } = await supabaseClient.auth.verifyOtp({
+                        token: code,
+                        type: 'recovery',
+                        new_password: newPassword
+                    });
 
-                    if (result.error) {
-                        throw result.error;
-                    }
+                    if (error) throw error;
 
                     showMessage('Password reset successful. Redirecting to app...');
                     document.getElementById('resetForm').style.display = 'none';
-                    localStorage.removeItem('resetToken');
                     localStorage.removeItem('resetCode');
                     
                     // Redirect to your app
