--- a/index.html
+++ b/index.html
@@ -66,17 +66,13 @@
                 console.log("Search params:", window.location.search);
                 console.log("Hash:", window.location.hash);
 
-                const accessToken = getURLParameter('access_token');
-                const refreshToken = getURLParameter('refresh_token');
+                const code = getURLParameter('code');
                 const error = getURLParameter('error');
                 const errorDescription = getURLParameter('error_description');
 
-                if (accessToken) {
-                    console.log("Access token found:", accessToken);
-                    localStorage.setItem('accessToken', accessToken);
-                    if (refreshToken) {
-                        localStorage.setItem('refreshToken', refreshToken);
-                    }
+                if (code) {
+                    console.log("Recovery code found:", code);
+                    localStorage.setItem('recoveryCode', code);
                     document.getElementById('resetForm').style.display = 'block';
                 } else if (error) {
                     console.log("Error found:", error, "Description:", errorDescription);
@@ -98,30 +94,30 @@
             async function resetPassword(event) {
                 event.preventDefault();
                 const newPassword = document.getElementById('newPassword').value;
-                const accessToken = localStorage.getItem('accessToken');
+                const recoveryCode = localStorage.getItem('recoveryCode');
 
                 if (newPassword.length < 6) {
                     showError('Password should be at least 6 characters.');
                     return;
                 }
 
-                if (!accessToken) {
-                    showError('No access token found. Please request a new password reset link.');
+                if (!recoveryCode) {
+                    showError('No recovery code found. Please request a new password reset link.');
                     return;
                 }
 
                 try {
-                    const { data, error } = await supabaseClient.auth.updateUser(
-                        { password: newPassword },
-                        { accessToken: accessToken }
-                    );
+                    const { data, error } = await supabaseClient.auth.verifyOtp({
+                        token: recoveryCode,
+                        type: 'recovery',
+                        new_password: newPassword
+                    });
 
                     if (error) throw error;
 
                     showMessage('Password reset successful. Redirecting to app...');
                     document.getElementById('resetForm').style.display = 'none';
-                    localStorage.removeItem('accessToken');
-                    localStorage.removeItem('refreshToken');
+                    localStorage.removeItem('recoveryCode');
                     
                     // Redirect to your app
                     setTimeout(() => {
