--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         }
         #resetForm {
             margin-top: 20px;
+            display: none;
         }
         input[type="password"] {
             width: 100%;
@@ -66,13 +67,14 @@
                 console.log("Search params:", window.location.search);
                 console.log("Hash:", window.location.hash);
 
-                const code = getURLParameter('code');
+                const accessToken = getURLParameter('access_token');
+                const type = getURLParameter('type');
                 const error = getURLParameter('error');
                 const errorDescription = getURLParameter('error_description');
 
-                if (code) {
-                    console.log("Recovery code found:", code);
-                    localStorage.setItem('recoveryCode', code);
+                if (accessToken && type === 'recovery') {
+                    console.log("Access token found:", accessToken);
+                    localStorage.setItem('accessToken', accessToken);
                     document.getElementById('resetForm').style.display = 'block';
                 } else if (error) {
                     console.log("Error found:", error, "Description:", errorDescription);
@@ -94,30 +96,29 @@
             async function resetPassword(event) {
                 event.preventDefault();
                 const newPassword = document.getElementById('newPassword').value;
-                const recoveryCode = localStorage.getItem('recoveryCode');
+                const accessToken = localStorage.getItem('accessToken');
 
                 if (newPassword.length < 6) {
                     showError('Password should be at least 6 characters.');
                     return;
                 }
 
-                if (!recoveryCode) {
-                    showError('No recovery code found. Please request a new password reset link.');
+                if (!accessToken) {
+                    showError('No access token found. Please request a new password reset link.');
                     return;
                 }
 
                 try {
-                    const { data, error } = await supabaseClient.auth.verifyOtp({
-                        token: recoveryCode,
-                        type: 'recovery',
-                        new_password: newPassword
-                    });
+                    const { data, error } = await supabaseClient.auth.updateUser(
+                        { password: newPassword },
+                        { accessToken: accessToken }
+                    );
 
                     if (error) throw error;
 
                     showMessage('Password reset successful. Redirecting to app...');
                     document.getElementById('resetForm').style.display = 'none';
-                    localStorage.removeItem('recoveryCode');
+                    localStorage.removeItem('accessToken');
                     
                     // Redirect to your app
                     setTimeout(() => {
