--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             }
 
             try {
-                const { error } = await supabase.auth.updateUser(
+                const { data, error } = await supabase.auth.updateUser(
                     { password: newPassword },
                     { accessToken: token }
                 )
